@@ -1,3 +1,7 @@
+2001-08-05  Bruno Haible  <haible@clisp.cons.org>
+
+	* pathname.d (legal_namechar): Treat ' ' as valid and '"' as invalid.
+
 2001-08-14  Sam Steingold  <sds@gnu.org>
 
 	fixed bug #448817
